--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "scripts": {
         "dev": "nodemon src/app.js",
-        "start": "node src/app.js"
+        "start": "node app.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
